WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57106
Missing expansion before ideograph at the beginning or end of a text run
https://bugs.webkit.org/show_bug.cgi?id=57106
Summary
Missing expansion before ideograph at the beginning or end of a text run
mitz
Reported
2011-03-25 10:37:47 PDT
Missing expansion before ideograph at the beginning or end of a text run
Attachments
Keep track of when leading expansion is allowed
(59.15 KB, patch)
2011-03-25 10:52 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-03-25 10:38:49 PDT
<
rdar://problem/9134330
>
mitz
Comment 2
2011-03-25 10:52:20 PDT
Created
attachment 86959
[details]
Keep track of when leading expansion is allowed
mitz
Comment 3
2011-03-25 17:48:13 PDT
Fixed in
r82013
. <
http://trac.webkit.org/changeset/82013
>
WebKit Review Bot
Comment 4
2011-03-25 18:51:37 PDT
http://trac.webkit.org/changeset/82013
might have broken Windows 7 Release (Tests) The following tests are not passing: fast/text/justify-ideograph-leading-expansion.html
mitz
Comment 5
2011-03-25 19:06:58 PDT
(In reply to
comment #4
)
>
http://trac.webkit.org/changeset/82013
might have broken Windows 7 Release (Tests) > The following tests are not passing: > fast/text/justify-ideograph-leading-expansion.html
Expansion for ideographs is not implemented on Windows, so it needs platform-specific results. I am going to land those if no one beats me to it.
Adam Barth
Comment 6
2011-03-26 00:25:04 PDT
This also caused a test failure on SL:
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r82020%20(27301)/fast/text/justify-ideograph-leading-expansion-pretty-diff.html
--- /Volumes/Data/WebKit-BuildSlave/snowleopard-intel-release-tests/build/layout-test-results/fast/text/justify-ideograph-leading-expansion-expected.txt 2011-03-25 19:02:41.000000000 -0700 +++ /Volumes/Data/WebKit-BuildSlave/snowleopard-intel-release-tests/build/layout-test-results/fast/text/justify-ideograph-leading-expansion-actual.txt 2011-03-25 19:02:41.000000000 -0700 @@ -3,7 +3,7 @@ layer at (0,0) size 800x600 RenderBlock {HTML} at (0,0) size 800x600 RenderBody {BODY} at (8,8) size 784x584 - RenderBlock {DIV} at (0,0) size 784x154 + RenderBlock {DIV} at (0,0) size 784x178 RenderBlock {DIV} at (0,0) size 106x54 [border: (3px solid #000000)] RenderText {#text} at (3,6) size 65x17 text run at (3,6) width 65: "a. b. " @@ -17,10 +17,11 @@ RenderText {#text} at (3,6) size 100x41 text run at (3,6) width 100: "a. b. i\x{306F}" text run at (3,30) width 63: "xxxxxxx" - RenderBlock {DIV} at (0,124) size 106x30 [border: (3px solid #000000)] - RenderText {#text} at (3,6) size 237x17 - text run at (3,6) width 237: "xxxxxxxxxxxxxxxxxxxxx\x{FF08}\x{624B}\x{FF09}" - RenderBlock {DIV} at (0,162) size 784x154 + RenderBlock {DIV} at (0,124) size 106x54 [border: (3px solid #000000)] + RenderText {#text} at (3,6) size 189x41 + text run at (3,6) width 189: "xxxxxxxxxxxxxxxxxxxxx" + text run at (3,30) width 48: "\x{FF08}\x{624B}\x{FF09}" + RenderBlock {DIV} at (0,186) size 784x178 RenderBlock {DIV} at (0,0) size 106x54 [border: (3px solid #000000)] RenderText {#text} at (3,6) size 65x17 text run at (3,6) width 65: "a. b. " @@ -34,6 +35,7 @@ RenderText {#text} at (3,6) size 100x41 text run at (3,6) width 100: "a. b. i\x{306F}" text run at (3,30) width 63: "xxxxxxx" - RenderBlock {DIV} at (0,124) size 106x30 [border: (3px solid #000000)] - RenderText {#text} at (3,6) size 237x17 - text run at (3,6) width 237: "xxxxxxxxxxxxxxxxxxxxx\x{FF08}\x{624B}\x{FF09}" + RenderBlock {DIV} at (0,124) size 106x54 [border: (3px solid #000000)] + RenderText {#text} at (3,6) size 189x41 + text run at (3,6) width 189: "xxxxxxxxxxxxxxxxxxxxx" + text run at (3,30) width 48: "\x{FF08}\x{624B}\x{FF09}"
mitz
Comment 7
2011-03-26 00:50:24 PDT
Platform-specific results added in <
http://trac.webkit.org/changeset/82026
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug